--- a/src/app/component/admin/home-admin/home-admin.component.html
+++ b/src/app/component/admin/home-admin/home-admin.component.html
@@ -22,25 +22,21 @@
   <table class="listUser">
     <thead>
       <tr>
-        <th scope="col">Nom</th>
-        <th scope="col">Prenom</th>
+        <th scope="col">Pseudo</th>
         <th scope="col">Mail</th>
         <th scope="col">Role</th>
         <th scope="col">Actions</th>
       </tr>
     </thead>
 
-    <tbody *ngFor="let user of dataUser">
+    <tbody *ngFor="let user of dataUsers">
       <tr>
-        <td data-label="Nom">{{ user.username }} h</td>
-        <td data-label="Prenom">{{ user.email }} b</td>
+        <td data-label="Nom">{{ user.username }} </td>
         <td data-label="Mail">{{ user.email }}</td>
         <td data-label="Role" *ngFor="let role of user?.roles">{{ tolowerRole(role.name) }} </td>
         <td data-label="Actions">
           <div class="display">
-            <!-- <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Modifier le projet">
-              <i class="far fa-edit"></i>
-            </button> -->
+
             <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Supprimer le projet">
               <i class="far fa-trash-alt"></i>
             </button>
