--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -48,7 +48,7 @@
                   <option selected>Selectionnez votre profil</option>
                   <!-- <option value="user">User</option> -->
                   <!-- <option value="moderator">Moderator</option> -->
-                  <!-- <option value="Admin">Admin</option> -->
+                  <option value="admin">Admin</option>
                   <option value="investisseur">Investisseur</option>
                   <option value="entrepreneur">Entrepreneur</option>
                 </select>
