--- a/src/app/component/reseau/reseau.component.html
+++ b/src/app/component/reseau/reseau.component.html
@@ -5,26 +5,26 @@
   </div>
   <!-- ********************************************************************************************************* -->
   <div class="container-fluid">
-    <form class="d-flex SEARCH">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <form class="d-flex SEARCH" (ngSubmit)="onSubmit()" [formGroup]="searchForm">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" formControlName="name">
       <button class="btn btn-outline-success" type="submit">
         <i class="fas fa-search"></i>
       </button>
     </form>
 
     <div class="filtre">
-      <div class="form-check form-check-inline">
+      <!-- <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
         <label class="form-check-label" for="inlineCheckbox1">Nom Prenom</label>
-      </div>
-      <div class="form-check form-check-inline">
+      </div> -->
+      <!-- <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
         <label class="form-check-label" for="inlineCheckbox2">Secteur d'activité</label>
-      </div>
-      <div class="form-check form-check-inline">
+      </div> -->
+      <!-- <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
         <label class="form-check-label" for="inlineCheckbox2">Pays</label>
-      </div>
+      </div> -->
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
         <label class="form-check-label" for="inlineCheckbox2">Nom Projet</label>
@@ -73,7 +73,6 @@
       </div>
       <div class="buttons">
         <button type="button" class="bouton" ngbTooltip="Contacter le projet">Contacter</button>
-        <!-- <button type="button" class="bouton" ngbTooltip="Supprimer le projet">Supprimer</button> -->
       </div>
     </div>
   </div>
