--- a/src/app/component/admin/admin-user/admin-user.component.html
+++ b/src/app/component/admin/admin-user/admin-user.component.html
@@ -1,11 +1,11 @@
-<form class="d-flex SEARCH" (ngSubmit)="onSubmit()" [formGroup]="searchForm">
+<form class="d-flex SEARCH" (ngSubmit)="deleteUser" [formGroup]="searchForm">
   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" formControlName="name">
   <button class="btn btn-outline-success" type="submit">
     <i class="fas fa-search"></i>
   </button>
 </form>
   <div class="projet">
-    <div class="list-projets" *ngFor="let user of dataUser">
+    <div class="list-projets" *ngFor="let user of dataUsers">
       <div class="container conteneur">
         <div class="entete">
           <h2>Pseudo: <span>{{ user.username }}</span></h2>
@@ -17,7 +17,6 @@
         </div>
         <div class="buttons">
           <button type="button" class="bouton">Contacter</button>
-          <!-- <button type="button" class="bouton" >Modifier</button> -->
           <button type="button" class="bouton"  (click)="deleteUser(user)">Supprimer</button>
         </div>
       </div>
