--- a/src/app/component/projet/projet.component.html
+++ b/src/app/component/projet/projet.component.html
@@ -9,7 +9,8 @@
 
 <div class="nouveau-projet">
   <h4>Ajouter un nouveau projet</h4>
-  <button type="button" class="btn btn-outline-secondary mr-2 buttonAdd" routerLink="/add-projet"
+  <button type="button" class="btn btn-outline-secondary mr-2 buttonAdd"
+    routerLink="/add-projet"
     routerLinkActive="active">
     <div class="buttonAdd">
       <i class="fas fa-plus-circle"></i>
