--- a/src/app/component/layout/nav-bar/nav-bar.component.html
+++ b/src/app/component/layout/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
         <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/reseau" routerLinkActive="active">Reseau</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isAdmin()">
           <a class="nav-link" href="#" routerLink="/home-admin" routerLinkActive="active">admin</a>
         </li>
         <li class="nav-item">
