--- a/src/app/component/reseau/reseau.component.html
+++ b/src/app/component/reseau/reseau.component.html
@@ -1,8 +1,4 @@
-<div class="container">
-  <div class="btn-group bouton-group" role="group" aria-label="Basic example">
-    <button type="button" class="btn btn-primary bouton">Left</button>
-    <button type="button" class="btn btn-primary bouton">Right</button>
-  </div>
+
   <!-- ********************************************************************************************************* -->
   <div class="container-fluid">
     <form class="d-flex SEARCH" (ngSubmit)="onSubmit()" [formGroup]="searchForm">
@@ -66,14 +62,48 @@
       </div>
       <hr>
       <div class="content">
-        <h4>Entrepreneur: <span>{{ projet.entrepreneur }}</span></h4>
+        <h4>Nom Entrepreneur: <span>{{ projet.entrepreneur }}</span></h4>
+        <h4>Email Entrepreneur: <span> nameEntrepreneur() </span></h4>
         <h4>Date de Début: <span>{{ projet.dateD }}</span></h4>
         <h4>Besoin: <span>{{ projet.besoin }}</span></h4>
         <h4>Description: <span>{{  projet.description }}</span></h4>
+        <h4>UuserId: <span>{{  projet.userId }}</span></h4>
       </div>
       <div class="buttons">
-        <button type="button" class="bouton" ngbTooltip="Contacter le projet">Contacter</button>
+        <a [href]="test">Envoyer mail</a>
+        <!-- Button trigger modal -->
+        <button type="button" class="bouton" ngbTooltip="Contacter le projet" routerLink="/contact" >Contacter</button>
+        <button type="button" class="bouton" ngbTooltip="Contacter le projet"  (click)="getUser(projet.userId)" data-bs-toggle="modal" data-bs-target="#exampleModal">Cliquez ici</button>
       </div>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" >
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Information de l'entrepreneur  </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+
+        <h4>Nom Entrepreneur: <span> {{dataUser?.username}} </span></h4>
+        <h4>Email Entrepreneur: <span> {{dataUser?.email}} </span></h4>
+        <a [href]="test">Envoyer mail</a>
+        <ul>
+          <li>{{dataUser?.projects}}</li>
+        </ul>
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
     </div>
   </div>
 </div>
