--- a/src/app/component/admin/home-admin/home-admin.component.html
+++ b/src/app/component/admin/home-admin/home-admin.component.html
@@ -37,7 +37,7 @@
         <td data-label="Actions">
           <div class="display">
 
-            <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Supprimer le projet">
+            <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Supprimer le projet" (click)="deleteUser(user)">
               <i class="far fa-trash-alt"></i>
             </button>
           </div>
