--- a/src/app/component/admin/admin-projet/admin-projet.component.html
+++ b/src/app/component/admin/admin-projet/admin-projet.component.html
@@ -43,12 +43,39 @@
         <h4>Description: <span>{{  projet.description }}</span></h4>
       </div>
       <div class="buttons">
-        <button type="button" class="bouton">Contacter</button>
+        <!-- <button type="button" class="bouton" ngbTooltip="Contacter le projet"  (click)="getUser(projet.userId)" data-bs-toggle="modal" data-bs-target="#exampleModal">Contacte</button> -->
         <button type="button" class="bouton" [routerLink]="['/edit-projet', projet?.id]">Modifier</button>
         <button type="button" class="bouton" (click)="deleteProj(projet?.id)">Supprimer</button>
       </div>
     </div>
   </div>
+
+
+  <!-- Modal -->
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" >
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Information de l'entrepreneur  </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+
+        <h4>Nom Entrepreneur: <span> {{dataUser?.username}} </span></h4>
+        <h4>Email Entrepreneur: <span> {{dataUser?.email}} </span></h4>
+        <a [href]="test">Envoyer mail</a>
+        <ul>
+          <li>{{dataUser?.projects}}</li>
+        </ul>
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div> -->
 </div>
 
 <div class="buttons">
