--- a/src/app/component/layout/nav-bar/nav-bar.component.html
+++ b/src/app/component/layout/nav-bar/nav-bar.component.html
@@ -9,25 +9,22 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#" routerLink="/" routerLinkActive="active">Home</a>
+          <a class="nav-link" href="#" routerLink="/home" routerLinkActive="active">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" routerLink="/reseau" routerLinkActive="active">Reseau</a>
+        <li class="nav-item" *ngIf="isEntrepreneur()">
+          <a class="nav-link" href="#" routerLink="/projet" routerLinkActive="active">Projet</a>
         </li>
         <li class="nav-item" *ngIf="isAdmin()">
-          <a class="nav-link" href="#" routerLink="/home-admin" routerLinkActive="active">admin</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" routerLink="/projet" routerLinkActive="active">Projet</a>
+          <a class="nav-link" href="#" routerLink="/home-admin" routerLinkActive="active">DashBoard</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-user-circle "></i>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#" routerLink="/home" routerLinkActive="active">Profil</a></li>
-            <li><a class="dropdown-item" href="#" routerLink="/card" routerLinkActive="active">Modifier le mot de passe</a></li>
-            <li><a class="dropdown-item" href="#" routerLink="/home-admin" routerLinkActive="active">Admin</a></li>
+            <li><a class="dropdown-item" href="#" routerLink="/profil" routerLinkActive="active">Profil</a></li>
+            <li *ngIf="isAdmin()"><a class="dropdown-item" href="#" routerLink="/admin-user" routerLinkActive="active">Admin</a></li>
             <li><a class="dropdown-item" href="#" routerLink="/login" routerLinkActive="active">Déconnexion</a></li>
           </ul>
         </li>
