--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -31,9 +31,13 @@
       width: 40%;
       height: auto;
       border: 1px solid #f27e63;
+      p{
+        padding: 1rem;
+      }
       .form-control{
         border: none;
-        font-size: x-small;      }
+        font-size: x-small;
+      }
     }
   }
 }
