--- a/src/app/component/layout/nav-bar/nav-bar.component.html
+++ b/src/app/component/layout/nav-bar/nav-bar.component.html
@@ -2,30 +2,34 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-farima">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">
+      <img src="../../../../assets/Fadimalogo.png" alt="" class="logo">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#" routerLink="/home" routerLinkActive="active">Accueil</a>
+      <ul class="navbar-nav container-list">
+        <li class="nav-item list">
+          <a class="nav-link list-lien" href="#" routerLink="/home" routerLinkActive="active">Accueil</a>
         </li>
-        <li class="nav-item">
-        <li class="nav-item" *ngIf="isEntrepreneur()">
-          <a class="nav-link" href="#" routerLink="/projet" routerLinkActive="active">Projet</a>
+        <li class="nav-item list">
+          <a class="nav-link list-lien" href="#" routerLink="/contact" routerLinkActive="active">Nous contacter</a>
         </li>
-        <li class="nav-item" *ngIf="isAdmin()">
-          <a class="nav-link" href="#" routerLink="/home-admin" routerLinkActive="active">DashBoard</a>
+        <li class="nav-item list" *ngIf="isEntrepreneur()">
+          <a class="nav-link list-lien" href="#" routerLink="/projet" routerLinkActive="active">Projet</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item list" *ngIf="isAdmin()">
+          <a class="nav-link list-lien" href="#" routerLink="/home-admin" routerLinkActive="active">DashBoard</a>
+        </li>
+        <li class="nav-item dropdown list" id="profil">
+          <a class="nav-link dropdown-toggle list-lien" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-user-circle "></i>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#" routerLink="/profil" routerLinkActive="active">Profil</a></li>
-            <li *ngIf="isAdmin()"><a class="dropdown-item" href="#" routerLink="/admin-user" routerLinkActive="active">Admin</a></li>
-            <li><a class="dropdown-item" href="#" routerLink="/login" routerLinkActive="active">Déconnexion</a></li>
+            <li><a class="dropdown-item list-lien" href="#" routerLink="/profil" routerLinkActive="active">Profil</a></li>
+            <li *ngIf="isAdmin()"><a class="dropdown-item list-lien" href="#" routerLink="/admin-user" routerLinkActive="active">Admin</a></li>
+            <li><a class="dropdown-item list-lien" href="#" routerLink="/login" routerLinkActive="active">Déconnexion</a></li>
           </ul>
         </li>
       </ul>
