--- a/src/app/component/layout/nav-bar/nav-bar.component.scss
+++ b/src/app/component/layout/nav-bar/nav-bar.component.scss
@@ -1,4 +1,27 @@
 .bg-farima{
   background-color: #3c5aa6;
   color: white;
+
+  .logo{
+    height: 40px;
+    width: auto;
+  }
+
+  .container-list{
+
+    .list{
+
+      .list-lien{
+        &:hover{
+          color: salmon;
+          background-color: #4b7af2;
+        }
+
+        &:active{
+          color: salmon;
+          background-color: #4b7af2;
+        }
+      }
+    }
+  }
 }
