--- a/src/app/component/projet/projet.component.html
+++ b/src/app/component/projet/projet.component.html
@@ -3,13 +3,13 @@
 <app-card
 *ngFor="let projet of dataProject"
 (idToDelete)="onDelete($event)"
-[projet]="projet" class="container">
+[projet]="projet" class="list">
 </app-card>
 
 
-<div class="nouveau-projet">
+<div class="container-projet">
   <h4>Ajouter un nouveau projet</h4>
-  <button type="button" class="btn btn-outline-secondary mr-2 buttonAdd"
+  <button type="button" class="button"
     routerLink="/add-projet"
     routerLinkActive="active">
     <div class="buttonAdd">
