--- a/src/app/component/projet/projet.component.scss
+++ b/src/app/component/projet/projet.component.scss
@@ -1,91 +1,25 @@
-.container{
-  border: 1px solid #f27e63;
-  margin: 1rem 0;
-  color: #3c5aa6;
-
-  .col-sm-3 {
-    flex: 0 0 auto;
-    width: 24.5%;
-    border: none;
-
-    .form-control, .form-select{
-      border: none;
-      color: #3c5aa6;
-    }
-  }
-  .col-sm-2 {
-  flex: 0 0 auto;
-  width: auto;
-  color: #3c5aa6;
-  }
-  .presentation {
-    border: 1px solid #f27e63;
-    height: 150px;
-    padding-bottom: 5px;
-    margin-bottom: 1rem;
-    color: #3c5aa6;
-    font-size: x-small;
-  }
-  input, select{
-    font-size: x-small;
-    margin-top: 5px;
-  }
-}
-.nouveau-projet {
-  border: 1px solid #f27e63;
-  color: #3c5aa6;
+.container-projet{
+  padding: 1rem;
+  height: auto;
+  border: 1px solid salmon;
+  border-radius: 10px;
   text-align: center;
-  margin-bottom: 1rem;
-  .buttonAdd{
+  margin: 1rem 0;
+
+  h4{
     color: #3c5aa6;
-    margin-bottom: 1rem;
   }
-}
-
-// .listProjet{
-
-// }
-
-.buttons{
-  margin: 1rem;
-}
-@media only screen and (max-width: 750px) and (min-width:480px)  {
-  .col-sm-3 {
-      flex: 0 0 auto;
-      flex-wrap: wrap;
-      width: 35,5% !important;
-      border: none;
-  }
-  .col-sm-2 {
-    flex: 0 0 auto;
-    width: auto;
-  }
-}
-.history{
-  padding: 10px;
-
-  button{
+  
+  .button{
+    border: salmon 1px solid;
+    border-radius: 50%;
     color: #3c5aa6;
-    border: #f27e63 1px solid;
-    padding: 5px;
-    margin: auto;
-  }
-}
-
-
-@media(max-width: 480px){
-  .col-sm-3 {
-      flex: 0 0 auto;
-      width: 60% !important;
-      border: none;
-  }
-  .col-sm-2 {
-    flex: 0 0 auto;
-    width: 40% !important;
-  }
-  .form-control, .form-select{
-    border: none;
-    color: #3c5aa6;
-    width: 100%;
+    height: 50px;
+    width: 50px;
+    &:hover{
+      background-color: #979690;
+      color: salmon;
+      border: 1px solid #3c5aa6;
+    }
   }
 }
