--- a/src/app/component/admin/admin-projet/admin-projet.component.html
+++ b/src/app/component/admin/admin-projet/admin-projet.component.html
@@ -49,8 +49,8 @@
       </div>
     </div>
   </div>
+  <p class="float-end"><a href="#" (click)="toBack($event)">Back to top</a></p>
 </div>
-
 
 <div class="buttonss" id="buttonss">
   <button class="button" routerLink="/home-admin" routerLinkActive="active">Home</button>
