--- a/src/app/component/edit-profil/edit-profil.component.html
+++ b/src/app/component/edit-profil/edit-profil.component.html
@@ -1,7 +1,7 @@
 <div class="login-form text-center">
   <main class="form-signin">
     <form (ngSubmit)="updateUser()" [formGroup]="userForm">
-      <h1>Créer ton compte !</h1>
+      <h1>Modifiez votre compte !</h1>
 
       <div class="form-floating">
         <input
