--- a/src/app/component/edit-user/edit-user.component.html
+++ b/src/app/component/edit-user/edit-user.component.html
@@ -2,7 +2,7 @@
   <main class="form-signin">
     <form class="container">
       <!-- (ngSubmit)="updateUser()" [formGroup]="userForm" -->
-      <h1>Créer Votre projet !</h1>
+      <h1>Modifiez Votre compte !</h1>
 
       <div class="form-floating">
         <input type="number"
