--- a/src/app/component/projet/edit-projet/edit-projet.component.html
+++ b/src/app/component/projet/edit-projet/edit-projet.component.html
@@ -1,7 +1,7 @@
 <div class="login-form text-center">
   <main class="form-signin">
     <form class="container" (ngSubmit)="updateProj()" [formGroup]="projetForm">
-      <h1>Créer Votre projet !</h1>
+      <h1>Modifiez Votre projet !</h1>
 
       <div class="form-floating">
         <input type="number"
