--- a/src/app/component/admin/admin-user/admin-user.component.scss
+++ b/src/app/component/admin/admin-user/admin-user.component.scss
@@ -155,6 +155,18 @@ table .display{
     }
   }
 }
+.scrollTop{
+  background-color: #979690;
+  border: 1px solid salmon;
+  border-radius: 5px;
+  margin: 1rem 0;
+  height: 40px;
+  width: 100px;
+  &:hover{
+    background-color: #4b7af2;
+    color: salmon;
+  }
+}
 
 .buttons{
   padding: 10px;
