--- a/src/app/component/authentification/login/login.component.scss
+++ b/src/app/component/authentification/login/login.component.scss
@@ -2,9 +2,9 @@
   height: 100%;
   display: flex;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 5% 10% 10%;
   background-color: #f5f5f5;
+  color:#3c5aa6;
 }
 
 .form-signin {
