tout marche sauf register

--- a/src/app/component/admin/admin-user/admin-user.component.html
+++ b/src/app/component/admin/admin-user/admin-user.component.html
@@ -23,7 +23,7 @@
   </div>
 <!-- ***************************************************************************************************** -->
 <div class="buttons">
-  <button class="scrollTop" (click)="toBack($event)">Haut</button>
+  <button class="button" (click)="toBack($event)">Haut</button>
   <button class="button" routerLink="/home-admin" routerLinkActive="active">Home</button>
   <button class="button" routerLink="/admin-projet" routerLinkActive="active">Projet</button>
 </div>
