--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -3,13 +3,21 @@
     <i class="fas fa-user"></i>  </div>
   <div class="bloc">
     <div class="infos">
-      <p>PSEUDO :  {{user?.username}}</p>
-      <p *ngFor="let role of user?.roles">STATUS :  {{ tolowerRole(role.name) }}</p>
-      <p>EMAIL :  {{user?.email}}</p>
+      <p class="title">PSEUDO :
+        <span class="text">{{user?.username}}</span>
+      </p>
+      <p class="title" *ngFor="let role of user?.roles">STATUS :
+        <span class="text"> {{ tolowerRole(role.name) }}</span>
+      </p>
+      <p class="title">EMAIL :
+        <span class="text"> {{user?.email}} </span>
+      </p>
     </div>
       <!-- ******************************presentation******************************************************** -->
     <div class="presentation">
-        <p>PRESENTATION :  {{user?.presentation}}</p>
+        <p class="title">PRESENTATION :
+          <span class="text">{{user?.presentation}}</span>
+        </p>
     </div>
   </div>
     <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Modifier le projet" routerLink="/edit-profil">
