--- a/src/app/component/admin/admin-projet/admin-projet.component.html
+++ b/src/app/component/admin/admin-projet/admin-projet.component.html
@@ -13,18 +13,6 @@
         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
         <label class="form-check-label" for="inlineCheckbox1">Nom Prenom</label>
       </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Secteur d'activité</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Pays</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Nom Projet</label>
-      </div>
     </div>
   </div>
   <!-- ********************************************************************************************************* -->
@@ -44,15 +32,15 @@
       </div>
       <div class="buttons">
         <!-- <button type="button" class="bouton" ngbTooltip="Contacter le projet"  (click)="getUser(projet.userId)" data-bs-toggle="modal" data-bs-target="#exampleModal">Contacte</button> -->
-        <button type="button" class="bouton" [routerLink]="['/edit-projet', projet?.id]">Modifier</button>
+          <button type="button" class="bouton" [routerLink]="['/edit-projet', projet?.id]">Modifier</button>
         <button type="button" class="bouton" (click)="deleteProj(projet?.id)">Supprimer</button>
       </div>
     </div>
   </div>
-  <p class="float-end"><a href="#" (click)="toBack($event)">Back to top</a></p>
 </div>
 
 <div class="buttonss" id="buttonss">
+  <button class="button" (click)="toBack($event)">Haut</button>
   <button class="button" routerLink="/home-admin" routerLinkActive="active">Home</button>
   <button class="button" routerLink="/admin-user" routerLinkActive="active">User</button>
 </div>
