--- a/src/app/component/admin/admin-projet/admin-projet.component.html
+++ b/src/app/component/admin/admin-projet/admin-projet.component.html
@@ -1,32 +1,12 @@
 <div class="container">
   <!-- ********************************************************************************************************* -->
-  <div class="container-fluid">
-    <form class="d-flex SEARCH">
+  <div class="container-fluid searchbar">
+    <form class="d-flex SEARCH" (ngSubmit)="onSubmit()" [formGroup]="searchForm">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">
         <i class="fas fa-search"></i>
       </button>
     </form>
-
-    <div class="filtre">
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-        <label class="form-check-label" for="inlineCheckbox1">Nom Prenom</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Secteur d'activité</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Pays</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Nom Projet</label>
-      </div>
-    </div>
-  </div>
   <!-- ********************************************************************************************************* -->
   <hr>
 <div class="projet">
@@ -49,10 +29,10 @@
       </div>
     </div>
   </div>
+  <p class="float-end"><a href="#" (click)="toBack($event)">Back to top</a></p>
 </div>
 
-
-<div class="buttonss" id="buttonss">
+<div class="buttons" id="buttonss">
   <button class="button" routerLink="/home-admin" routerLinkActive="active">Home</button>
   <button class="button" routerLink="/admin-user" routerLinkActive="active">User</button>
 </div>
