--- a/src/app/component/admin/admin-user/admin-user.component.html
+++ b/src/app/component/admin/admin-user/admin-user.component.html
@@ -1,4 +1,4 @@
-<form class="d-flex SEARCH" (ngSubmit)="deleteUser" [formGroup]="searchForm">
+<form class="d-flex SEARCH searchbar" (ngSubmit)="deleteUser" [formGroup]="searchForm">
   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" formControlName="name">
   <button class="btn btn-outline-success" type="submit">
     <i class="fas fa-search"></i>
@@ -20,6 +20,7 @@
         </div>
       </div>
     </div>
+    <p class="float-end"><a href="#" (click)="toBack($event)">Back to top</a></p>
   </div>
 <!-- ***************************************************************************************************** -->
 <div class="buttons">
