--- a/src/app/component/authentification/register/register.component.html
+++ b/src/app/component/authentification/register/register.component.html
@@ -1,22 +1,23 @@
 <div class="login-form text-center">
   <main class="form-signin">
     <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
-      <h1>Créer ton compte !</h1>
+      <h1>Créez votre compte !</h1>
 
       <div class="form-floating">
         <input
           type="text"
           class="form-control"
-          id="floatingInput"
+          id="floatingInput username"
           placeholder=""
           formControlName="username"
         />
-        <label for="floatingInput">username</label>
+        <label for="floatingInput frmNameA" autocomplete="username">username</label>
       </div>
 
       <div class="form-floating">
         <input
           type="email"
+
           [ngClass]="{
             'is-invalid':
               (registerForm.get('email')?.dirty ||
@@ -24,36 +25,55 @@
               registerForm.get('email')?.invalid
           }"
           class="form-control"
-          id="floatingInput"
+          id="floatingInput email"
           placeholder=""
           formControlName="email"
         />
-        <label for="floatingInput">Adresse email</label>
+        <label for="floatingInput email" autocomplete="email">Adresse email</label>
       </div>
 
       <div class="form-floating">
         <input
           type="text"
           class="form-control"
-          id="floatingInput"
+          id="floatingInput presentation"
           placeholder=""
           formControlName="presentation"
         />
-        <label for="floatingInput">presentation</label>
+        <label for="floatingInput presentation" autocomplete="presentation">presentation</label>
+      </div>
+
+      <div class="form-floating">
+        <input
+          type="tel"
+          class="form-control"
+          id="floatingInput number"
+          placeholder=""
+          autocomplete="number"
+          formControlName="number"
+        />
+        <label for="floatingInput number">Telephone</label>
       </div>
 
       <div class="form-floating">
                 <select aria-label="Default select example" class="form-control"
-                id="floatingInput"formControlName="role">
+                id="floatingInput role"formControlName="role">
                   <option selected>Selectionnez votre profil</option>
                   <!-- <option value="user">User</option> -->
                   <!-- <option value="moderator">Moderator</option> -->
-                  <option value="admin">Admin</option>
-                  <option value="investisseur">Investisseur</option>
-                  <option value="entrepreneur">Entrepreneur</option>
+                  <option value="ROLE_ADMIN">Admin</option>
+                  <option value="ROLE_USER">Investisseur</option>
+                  <option value="ROLE_MODERATOR">Entrepreneur</option>
                 </select>
-                <label for="floatingInput">Role</label>
+                <label for="floatingInput role">Role</label>
       </div>
+
+      <!-- <div class="form-group">
+        <label class="post-image">Image</label>
+        <input type="file" name="fileImage" class="form-control" placeholder="Title" accept="image/png, image/jpeg"
+          (change)="onSelectFile($event)">
+        <img [src]="imgURL" alt="" height="200" *ngIf="imgURL">
+      </div> -->
 
       <div class="form-floating">
         <input
@@ -65,11 +85,12 @@
                 registerForm.get('password')?.touched) &&
               registerForm.get('password')?.invalid
           }"
-          id="floatingInput"
+          id="floatingInput password"
           placeholder=""
           formControlName="password"
+          autocomplete="password"
         />
-        <label for="floatingInput">Mot de passe</label>
+        <label for="floatingInput password">Mot de passe</label>
       </div>
 
       <button
