--- a/src/app/component/reseau/reseau.component.html
+++ b/src/app/component/reseau/reseau.component.html
@@ -9,51 +9,14 @@
     </form>
 
     <div class="filtre">
-      <!-- <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-        <label class="form-check-label" for="inlineCheckbox1">Nom Prenom</label>
-      </div> -->
-      <!-- <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Secteur d'activité</label>
-      </div> -->
-      <!-- <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Pays</label>
-      </div> -->
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">Nom Projet</label>
+        <label class="form-check-label" for="inlineCheckbox2">Nom Prenom</label>
       </div>
     </div>
   </div>
   <!-- ********************************************************************************************************* -->
   <hr>
-  <!-- <div class="container">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Description</th>
-          <th scope="col">Besoin</th>
-          <th scope="col">Date de début</th>
-          <th scope="col">Entrepreneur</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let projet of dataProject">
-          <th scope="row">{{projet.id}}</th>
-          <td>{{projet.name}}</td>
-          <td>{{projet.description}}</td>
-          <td>{{projet.besoin}}</td>
-          <td>{{projet.dateD}}</td>
-          <td>{{projet.entrepreneur}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div> -->
-
 <div class="projet">
   <div class="list-projets" *ngFor="let projet of dataProject">
     <div class="container conteneur">
@@ -83,15 +46,11 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              ...
 
               <h4>Nom Entrepreneur: <span> {{dataUser?.username}} </span></h4>
               <h4>Email Entrepreneur: <span> {{dataUser?.email}} </span></h4>
               <a href={{dataUser?.email}}>Envoyer mail</a>
-              <ul>
-                <li>{{dataUser?.projects}}</li>
-              </ul>
-              ...
+
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
@@ -101,4 +60,8 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="container">
+  <p class="scrollTop"><a href="#" (click)="toBack($event)">Back to top</a></p>
 </div>
