--- a/src/app/component/authentification/bye/bye.component.html
+++ b/src/app/component/authentification/bye/bye.component.html
@@ -1,10 +1,15 @@
-<div class="container row">
-  <div class="containerr col-sm-8 md-6 lg-8">
-    <h2>On espère vous revoir très vite!</h2>
-    <div class="buttons">
-      <button class="button"  routerLink="/register">S'inscrire</button>
-      <button class="button"  routerLink="/login">Se connecter</button>
+<div class="containe">
+  <div class="logo-div">
+    <img src="../../../../assets/Fadimalogo.png" alt="" class="logo">
+  </div>
+</div>
+
+  <div class="container row">
+    <div class="containerr col-sm-8 md-6 lg-8">
+      <h2 class="title">On espère vous revoir très vite!</h2>
+      <div class="buttons">
+        <button class="button"  routerLink="/register">S'inscrire</button>
+        <button class="button"  routerLink="/login">Se connecter</button>
+      </div>
     </div>
   </div>
-
-</div>
