--- a/src/app/component/admin/admin-projet/admin-projet.component.html
+++ b/src/app/component/admin/admin-projet/admin-projet.component.html
@@ -1,20 +1,12 @@
 <div class="container">
   <!-- ********************************************************************************************************* -->
-  <div class="container-fluid">
-    <form class="d-flex SEARCH">
+  <div class="container-fluid searchbar">
+    <form class="d-flex SEARCH" (ngSubmit)="onSubmit()" [formGroup]="searchForm">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">
         <i class="fas fa-search"></i>
       </button>
     </form>
-
-    <div class="filtre">
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-        <label class="form-check-label" for="inlineCheckbox1">Nom Prenom</label>
-      </div>
-    </div>
-  </div>
   <!-- ********************************************************************************************************* -->
   <hr>
 <div class="projet">
@@ -31,16 +23,15 @@
         <h4>Description: <span>{{  projet.description }}</span></h4>
       </div>
       <div class="buttons">
-        <!-- <button type="button" class="bouton" ngbTooltip="Contacter le projet"  (click)="getUser(projet.userId)" data-bs-toggle="modal" data-bs-target="#exampleModal">Contacte</button> -->
-          <button type="button" class="bouton" [routerLink]="['/edit-projet', projet?.id]">Modifier</button>
+        <button type="button" class="bouton" [routerLink]="['/edit-projet', projet?.id]">Modifier</button>
         <button type="button" class="bouton" (click)="deleteProj(projet?.id)">Supprimer</button>
       </div>
     </div>
   </div>
+  <p class="float-end"><a href="#" (click)="toBack($event)">Back to top</a></p>
 </div>
 
-<div class="buttonss" id="buttonss">
-  <button class="button" (click)="toBack($event)">Haut</button>
+<div class="buttons" id="buttonss">
   <button class="button" routerLink="/home-admin" routerLinkActive="active">Home</button>
   <button class="button" routerLink="/admin-user" routerLinkActive="active">User</button>
 </div>
