--- a/src/app/component/admin/admin-user/admin-user.component.scss
+++ b/src/app/component/admin/admin-user/admin-user.component.scss
@@ -1,134 +1,13 @@
-.admin{
-  display: flex;
-  justify-content: space-around;
+.searchbar{
+  margin-top: 1rem;
 }
-
-.nouveau-projet {
-    border: 1px solid #f27e63;
-    color: #3c5aa6;
-    text-align: center;
-    padding-bottom: 1rem;
-    height: auto;
-    min-width: 150px;
-    max-width: 200px;
-    margin: 1rem;
-    &:hover{
-      background-color: #979690;
-    }
-
-    .buttonAdd{
-      color: #3c5aa6;
-      &:hover{
-        background-color: #f27e63;
-      }
-      .fontAweson{
-        margin-bottom: 1rem;
-      }
-    }
-
-}
-body {
-  font-family: "Open Sans", sans-serif;
-  line-height: 1.25;
-}
-
-table {
-  border: 1px solid #ccc;
-  border-collapse: collapse;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  table-layout: fixed;
-}
-
-table caption {
-  font-size: 1.5em;
-  margin: .5em 0 .75em;
-}
-
-table tr {
-  background-color: #f8f8f8;
-  border: 1px solid #ddd;
-  padding: .35em;
-}
-
-table th,
-table td {
-  padding: .625em;
-  text-align: center;
-}
-
-table th {
-  font-size: .85em;
-  letter-spacing: .1em;
-  text-transform: uppercase;
-}
-table .display{
-  display: flex !important;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 770px) {
-  table {
-    border: 0;
-  }
-
-  table caption {
-    font-size: 1.3em;
-  }
-
-  table thead {
-    border: none;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-
-  table tr {
-    border-bottom: 3px solid #ddd;
-    display: block;
-    margin-bottom: .625em;
-  }
-
-  table td {
-    border-bottom: 1px solid #ddd;
-    display: block;
-    font-size: .8em;
-    text-align: right;
-  }
-
-  table .display{
-    display: flex !important;
-    justify-content: space-around;
-  }
-  table td::before {
-    /*
-    * aria-label has no advantage, it won't be read inside a table
-    content: attr(aria-label);
-    */
-    content: attr(data-label);
-    float: left;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-
-  table td:last-child {
-    border-bottom: 0;
-  }
-}
-
 .projet{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   .list-projets{
-    height: auto;
-    min-height: 200px;
-    width: 250px;
+    max-width: 300px;
+    min-width: 250px;
     border: 1px solid salmon;
     background-color: rgb(238, 234, 234);
     border-radius: 10px;
@@ -137,20 +16,6 @@ table .display{
     .content{
       span{
         font-size: medium;
-      }
-    }
-    .buttons{
-      padding: 10px;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      // margin: 10px;
-      button{
-        color: #3c5aa6;
-        border: #f27e63 1px solid;
-        padding: 5px;
-        margin: 5px;
-        border-radius: 5px;
       }
     }
   }
@@ -169,3 +34,4 @@ table .display{
     border-radius: 5px;
   }
 }
+
