--- a/src/app/component/authentification/bye/bye.component.scss
+++ b/src/app/component/authentification/bye/bye.component.scss
@@ -1,30 +1,51 @@
-.containerr{
-  color: white;
-  // width: 300px;
-  // height: auto;
-  margin: 10% auto;
-  padding: 5%;
-  border-radius: 50px;
-  background-color: #3c5aa6;
-  // border: 1px salmon solid;
-  .buttons{
-    display: flex;
-    justify-content: space-around;
-    .button{
-      color: salmon;
-      // background-color: #4b7af2;
+.containe{
+  // display: block;
+  // justify-content: center;
+  padding: 0 100px;
+  margin: 2rem auto;
+  padding: 0 auto;
+  .logo-div{
+    height: 40px;
+    width: 100px;
+    border-radius: 30px;
+    background-color: #3c5aa6;
+    img{
       height: 40px;
-      border-radius: 5px;
-      width: auto;
-      border: none;
-      // border: 2px solid salmon;
-      margin: 1rem;
-      // #4b7af2
-      &:hover{
-        background-color: #4b7af2;
-
+      margin: auto;
+      width: 100px;
+    }
+  }
+}
+  .containerr{
+    color: white;
+    margin: 1rem auto;
+    border-radius: 50px;
+    display: block;
+    justify-content: center;
+    min-height: 200px;
+    border: 1px solid salmon;
+    background-color: rgb(238, 234, 234);
+    .title{
+      margin: 2rem auto;
+      text-align: center;
+      color: #3c5aa6;
+    }
+    .buttons{
+      display: flex;
+      justify-content: space-around;
+      .button{
+        color: #4b7af2;
+        height: 40px;
+        border-radius: 5px;
+        width: auto;
+        border: none;
+        margin: 1rem;
+        border: 1px salmon solid;
+        &:hover{
+          background-color: #4b7af2;
+        }
       }
     }
   }
 
-}
+
