--- a/src/app/component/authentification/register/register.component.html
+++ b/src/app/component/authentification/register/register.component.html
@@ -53,25 +53,17 @@
         <label for="floatingInput">Telephone</label>
       </div>
 
-      <div class="form-floating">
-                <select aria-label="Default select example" class="form-control"
-                id="floatingInput"formControlName="role">
-                  <option selected>Selectionnez votre profil</option>
-                  <!-- <option value="user">User</option> -->
-                  <!-- <option value="moderator">Moderator</option> -->
-                  <option value="admin">Admin</option>
-                  <option value="user">Investisseur</option>
-                  <option value="mod">Entrepreneur</option>
-                </select>
-                <label for="floatingInput">Role</label>
-      </div>
 
-      <!-- <div class="form-group">
-        <label class="post-image">Image</label>
-        <input type="file" name="fileImage" class="form-control" placeholder="Title" accept="image/png, image/jpeg"
-          (change)="onSelectFile($event)">
-        <img [src]="imgURL" alt="" height="200" *ngIf="imgURL">
-      </div> -->
+      <div class="form-floating">
+        <select aria-label="Default select example" class="form-control"
+                id="floatingInput role"formControlName="role">
+                  <option selected>Selectionnez votre profil</option>
+                  <option value="ROLE_ADMIN">Admin</option>
+                  <option value="ROLE_USER">Investisseur</option>
+                  <option value="ROLE_MODERATOR">Entrepreneur</option>
+                </select>
+                <label for="floatingInput role">Role</label>
+      </div>
 
       <div class="form-floating">
         <input
